aarlo
0.8.0a9: Call stop on auth failure.
  Smarter backend detection.
  Bumped pyaarlo version.
0.8.0a8: Bumped pyaarlo version.
  Fixed DOMAIN handling and mode changes, snapshot...
  Fixed entity_id in callbacks
0.8.0a7: Bumped pyaarlo version.
  Use Mqtt or SSE backend
  Support Mqtt backend [pyaarlo]
  Added support for devices (NickM-27)
  Fix device attribute error messages.
0.8.0a6: Added battery device class
0.8.0a5: Add width/height to camera_image
0.8.0a4: Bumped pyaarlo version.
  Add port support to IMAP. [pyaarlo]
  Don't get resources for Essential cameras. [pyaarlo]
  Don't ping Pro 3 floodlight. [pyaarlo]
  Don't ping Essential and Pro 4 cameras. [pyaarlo]
  Stop when asked to. [pyaarlo]
  Fixed schedule handling. [pyaarlo]
  Handle events in the background thread. [pyaarlo]
  Update token to map to email address [pyaarlo]
  Save last video details [pyaarlo]
  Don't signal unless information has really changed [pyaarlo]
  Add GO camera support. [pyaarlo]
  Fixed header issue. [pyaarlo]
  Add video_url to last_capture sensor. [pyaarlo]
0.8.0a3: Add video_url to last_capture sensor.
  Use new "last video values" interface
  Tidy up the default values.
0.8.0a2: Add save authentication configuration.
0.8.0a1: Initial 0.8 release
  Remove deprecated service calls
  Remove pyaarlo code

aarlo/pyaarlo
0.7.1: Remove double connected doorbell entity.
0.7.1b15: Allow quoted printable in tfa email from Arlo.
0.7.1b14: Fix for Home Assistant beta.
0.7.1b13: Fix wirefree doorbell duplicate entries.
0.7.1b12: Fix wirefree doorbell drain.
0.7.1b11: Added new automation return value.
0.7.1b10: Fix plugged icon.
0.7.1b9: Add cloudscraper support.
0.7.1b7: Stop HA polling us.
        Allow removal of unicode characters from entity ids
        Siren on wired doorbell.
        Better doorbell icon.
0.7.1b6: Add new event handling
        Allow custimisable disarmed mode
0.7.1b5: Don't rely on camera reporting back idle status
0.7.1b4: Smart user agents.